<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mon_nom">Vincent del Valle</string>
    <string name="mon_nom_Denuc">Thibault Denuc</string>
    <string name="matthieu_durindel">Matthieu Durindel</string>
    <string name="mathea">Mathéa Renaudie</string>
    <string name="jules">Jules Duvivier</string>
    <string name="RomainGaillard">Romain Gaillard</string>
    <string name="BastienGrasa">Bastien Grasa</string>
    <string name="louka">Louka Hanuise</string>
    <string name="alex">Alexandre Plaitant</string>
    <string name="btn_maximethizeau">Maxime Thizeau</string>

</resources>
