<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_mon_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mon_nom"/>

    <Button
        android:id="@+id/btn_RomainGaillard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RomainGaillard"/>

    <Button
        android:id="@+id/btn_matthieu_durindel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matthieu_durindel"/>

    <Button
        android:id="@+id/btn_mathea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mathea"/>

</LinearLayout>
